<resources>
    <string name="app_name">Cube</string>
    <string name="settings">Settings</string>
    <string name="finance">Finance</string>
    <string name="balance">Current balance</string>
    <string name="budget">Budget</string>
    <string name="_100000">$ 100000</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="transaction">Transactions</string>
    <string name="amount_digit_plus">+ $ %.0f</string>
    <string name="amount_digit_minus">- $ %.0f</string>
    <string name="amount_digit">$ %.0f</string>
    <string name="label">Label</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add_transaction_title">Add Transaction</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="transaction_added">Transaction added</string>
    <string name="transaction_changed">Transaction changed</string>
    <string name="deleted">TRANSACTION DELETED</string>
    <string name="dark_mode">Dark mode</string>
    <string name="language">Language</string>
    <string name="onboarding_description">We help you to allocate your finances wisely with our app</string>
    <string name="financial_helper">FINANCIAL HELPER</string>
    <string name="next">Next</string>
    <string name="hint_name_onboarding">Enter your name</string>
    <string name="tv_title_display_name">We will display your name on main page</string>
    <string name="finish">Finish</string>
    <string name="required">Required</string>
    <string name="welcome">Welcome!</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_exit">Are you sure want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="greeting">Hi, %1$s</string>
    <string name="undo">UNDO</string>
    <string name="delete_transaction_dialog">Delete Transaction</string>
    <string name="delete_transaction_message_dialog">Are you sure want to delete this transaction?</string>
    <string name="setting">Setting</string>
</resources>