<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.FirstScreenFragment">

    <ImageView
        android:id="@+id/img_onboarding"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/financial_profit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColor="@color/dark_blue"
        android:text="@string/financial_helper"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/nexa_bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/img_onboarding"
        app:layout_constraintTop_toBottomOf="@+id/img_onboarding"
        app:layout_constraintEnd_toEndOf="@id/img_onboarding"/>

    <TextView
        android:id="@+id/tv_onboarding_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/onboarding_description"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:textStyle="bold"
        android:fontFamily="@font/nexa_light"
        app:layout_constraintStart_toStartOf="@+id/tv_onboarding_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_title"
        app:layout_constraintEnd_toEndOf="@id/tv_onboarding_title"/>

    <TextView
        android:id="@+id/tv_next_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/next"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        android:fontFamily="@font/nexa_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>