<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.SecondScreenFragment">

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="60dp"
        android:textSize="17sp"
        android:textAlignment="center"
        android:hint="@string/hint_name_onboarding"
        android:backgroundTint="@color/blue"
        android:textColorHint="@color/blue"
        android:fontFamily="@font/nexa_light"
        android:inputType="text|textCapSentences"
        app:layout_constraintEnd_toEndOf="@+id/img_user"
        app:layout_constraintStart_toStartOf="@+id/img_user"
        app:layout_constraintTop_toBottomOf="@+id/img_user" />

    <TextView
        android:id="@+id/tv_title_display_name_onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/tv_title_display_name"
        android:textStyle="bold"
        android:fontFamily="@font/nexa_bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_username"
        app:layout_constraintStart_toStartOf="@+id/edt_username"
        app:layout_constraintTop_toBottomOf="@+id/edt_username"/>

    <TextView
        android:id="@+id/tv_finish_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/finish"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        android:fontFamily="@font/nexa_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>