<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finance_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/card_blue"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/card_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:baselineAligned="false"
            android:gravity="start|center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="0.5"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/balance"
                    android:textColor="@color/light_gray"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/_100000"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:gravity="bottom|end"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_add_transaction"
                    style="@style/Widget.MaterialComponents.FloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_700"
                    android:contentDescription="@string/add_transaction_title"
                    android:src="@drawable/ic_baseline_add_24"
                    app:borderWidth="0dp"
                    app:elevation="0dp"
                    app:rippleColor="@color/light_gray"
                    app:tint="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/card_green"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="@id/cv_balance"
        app:layout_constraintTop_toBottomOf="@id/cv_balance"
        app:strokeColor="@color/card_green">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_budget"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/nexa_bold"
                android:text="@string/_100000"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_bold"
                android:text="@string/income"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/card_red"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="@id/cv_balance"
        app:layout_constraintTop_toBottomOf="@id/cv_balance"
        app:strokeColor="@color/card_red">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_expense"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/nexa_bold"
                android:text="@string/_100000"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_bold"
                android:text="@string/expense"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nexa_light"
        android:text="@string/transaction"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cv_expense"
        app:layout_constraintStart_toStartOf="@id/cv_income"
        app:layout_constraintTop_toBottomOf="@id/cv_income" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tv_transactions"
        android:layout_marginTop="5dp"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_transactions">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            tools:listitem="@layout/transaction_row_item" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>